<resources>
    <string name="app_name">College Eats</string>
    <string name="menu_info">Info</string>
    <string name="menu_home">Home</string>
    <string name="menu_recipes">Recipe Explorer</string>
    <string name="menu_myrecipes">My Recipes</string>
    <string name="menu_login">Log In</string>
    <string name="menu_grocerylist">Grocery List</string>
    <string name="info_alert_title">About College Eats</string>
    <string name="info_alert_message">This app was created to help college students try new foods and make their own recipes.</string>
    <string name="recipe_button">Recipe</string>
    <string name="todo">TODO</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="login_button">LogIn</string>
    <string name="register_button">Register</string>
    <string name="password_hint">abc123$#</string>
    <string name="email_hint">abc123@psu.edu</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>



    <string name="menu_register">Register</string>
    <string name="app_info">This app supports class activities for HCDD 340!</string>
    <string name="login_error_title">Unable to login</string>
    <string name="login_error_message">Please retry using correct email and password.</string>
    <string name="last_name_label">Last Name:</string>
    <string name="first_name_label">First Name:</string>
    <string name="crispy_shrimp_tacos">Crispy Shrimp Tacos</string>
    <string name="chicken_parm">Chicken Parmesan</string>
    <string name="refresh">refresh</string>
    <string name="like">like</string>
    <string name="back">back</string>
    <string name="export">export</string>
    <string name="logo">logo</string>
    <string name="logo1">logo</string>
    
    
    
    <string name="ingredients">Ingredients:</string>
    <string name="preparations">Preparations:</string>
    <string name="ingredient_list_chicken_parm">
        <b> 4 Boneless Chicken Breasts </b>
        <b> 3 Eggs </b>
        <b> 2-TBS Flour </b>
        <b> 2-Cups Breadcrumbs </b>
        <b> 1-Cup Shredded Parmesan Cheese </b>
        <b> Kosher Salt </b>
        <b> Black Pepper </b>
        <b> ¼-Cup Extra Virgin Olive Oil </b>
        <b> Fresh Mozzarella Cheese Sliced </b>
        <b> 1-lb Spaghetti noodles </b>
        <b> 1-Jar Galassi Pasta Sauce </b></string>
    <string name="prep_chicken_parm">Slice chicken breast on the diagonal. Pound chicken breast to ¼” thick. Season with salt
and pepper. Slightly beat the 3 eggs in a shallow dish. Mix flour, breadcrumbs and
parmesan cheese together in a large bowl. Prepare spaghetti according to directions,
drain and place back into pot over low heat and add Galassi Pasta Sauce and stir till
noodles are coated well and sauce is to temp. Heat olive oil to medium heat in a skillet.
Dredge chicken pieces in eggs, then coat in dry mixture. Fry chicken in olive oil until
bottom side is golden brown. Turn Chicken over add sliced mozzarella to top of chicken
continue to fry till other side is golden brown. Remove chicken. </string>
    <string name="ingrediant_list">ingrediant_list</string>

</resources>