<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_info"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/menu_info"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_home"
        android:icon="@color/white"
        android:title="@string/menu_home"
        android:visible="true" />
    <item
        android:id="@+id/menu_recipes"
        android:title="@string/menu_recipes" />
    <item
        android:id="@+id/menu_myrecipes"
        android:title="@string/menu_myrecipes" />
    <item
        android:id="@+id/menu_grocerylist"
        android:title="@string/menu_grocerylist" />
    <item
        android:id="@+id/menu_login"
        android:title="@string/menu_login" />
</menu>